# Smash

./: README.md
Qt_project/build-smash-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Qt_project/smash/: main.cpp  mainmenu.cpp  mainmenu.cpp.autosave  player.cpp  player.h  smash.pro
exe/Windows_executer/: Makefile  Makefile.Debug  Makefile.Release  options.txt
exe/Windows_executer/debug/: moc_characterselect.cpp  moc_game.cpp  (+4 more)
executable_test/: Makefile  Makefile.Debug  Makefile.Release  object_script.smash.Debug  object_script.smash.Release
executable_test/release/: moc_characterselect.cpp  moc_game.cpp  moc_levelselect.cpp  moc_mainmenu.cpp
plan/: project_plan_feedback_other-1.txt
src/Qt_project/smash/: CMakeLists.txt  CMakeSettings.json  Resourses.qrc  background.cpp  background.h  characterselect.cpp  characterselect.h  default_options.txt  game.cpp  game.h  game_1  game_2  gingerbread.cpp  gingerbread.h  lakki.h  levelselect.cpp  levelselect.h  main.cpp  mainmenu.cpp  mainmenu.h  options.cpp  options.h  options.txt  options_view.h  platform.cpp  platform.h  player.cpp  player.h  smash.pro  totoro.h
src/Qt_project/smash/Step1_build/: CMakeCache.txt  cmake_install.cmake
src/Qt_project/smash/Step1_build/Smash.dir/Debug/Smash.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Smash.lastbuildstate
src/Qt_project/smash/Step1_build/Smash_autogen/: mocs_compilation.cpp
src/Qt_project/smash/Step1_build/Smash_autogen/include_Debug/EWIEGA46WW/: moc_characterselect.cpp.d  moc_levelselect.cpp.d  moc_mainmenu.cpp.d
src/Qt_project/smash/Step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/Qt_project/smash/Step1_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/build-smash-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/smash/: CMakeLists.txt  characterselect.h  custombutton.cpp  custombutton.h  default_options.txt  game.cpp  game.h  game_2  gingerbread.h  levelselect.cpp  levelselect.h  main.cpp  mainmenu.cpp  options.h  options_view.cpp  platform.cpp  platform.h  player.cpp  player.h  totoro.h
(+42 files in other folders)
